--- a/seat.html
+++ b/seat.html
@@ -51,7 +51,7 @@
                 <div class="page-title-area">
                     <div class="item md-order-1">
                         <a
-                            href="movie-ticket-plan.html"
+                            href="showtime.html"
                             class="custom-button back-button"
                         >
                             <i class="flaticon-double-right-arrows-angles"></i
@@ -695,7 +695,7 @@
                             <h3 class="title">3.000.000 VNĐ</h3>
                         </div>
                         <div class="book-item">
-                            <a href="movie-checkout.html" class="custom-button"
+                            <a href="checkout.html" class="custom-button"
                                 >thanh toán</a
                             >
                         </div>
