--- a/showtime.html
+++ b/showtime.html
@@ -26,27 +26,6 @@
     </head>
 
     <body>
-        <!-- ==========Window-Warning-Section========== -->
-        <section class="window-warning inActive">
-            <div class="lay"></div>
-            <div class="warning-item">
-                <h6 class="subtitle">Bước Tiếp Theo</h6>
-                <h4 class="title">chọn ghế</h4>
-                <div class="thumb">
-                    <img
-                        src="./assets/images/movie/seat-plan.png"
-                        alt="movie"
-                    />
-                </div>
-                <a
-                    href="movie-seat-plan.html"
-                    class="custom-button seatPlanButton"
-                    >ok, đi nào<i class="fas fa-angle-right"></i
-                ></a>
-            </div>
-        </section>
-        <!-- ==========Window-Warning-Section========== -->
-
         <!-- ==========Banner-Section========== -->
         <section
             class="details-banner hero-area bg_img"
@@ -259,6 +238,25 @@
             </div>
         </div>
         <!-- ==========Movie-Section========== -->
+
+        <!-- ==========Window-Warning-Section========== -->
+        <section class="window-warning inActive">
+            <div class="lay"></div>
+            <div class="warning-item">
+                <h6 class="subtitle">Bước Tiếp Theo</h6>
+                <h4 class="title">chọn ghế</h4>
+                <div class="thumb">
+                    <img
+                        src="./assets/images/movie/seat-plan.png"
+                        alt="movie"
+                    />
+                </div>
+                <a href="seat.html" class="custom-button seatPlanButton"
+                    >ok, đi nào<i class="fas fa-angle-right"></i
+                ></a>
+            </div>
+        </section>
+        <!-- ==========Window-Warning-Section========== -->
 
         <script src="assets/js/jquery-3.3.1.min.js"></script>
         <script src="assets/js/modernizr-3.6.0.min.js"></script>
