--- a/checkout.html
+++ b/checkout.html
@@ -50,10 +50,7 @@
             <div class="container">
                 <div class="page-title-area">
                     <div class="item md-order-1">
-                        <a
-                            href="movie-ticket-plan.html"
-                            class="custom-button back-button"
-                        >
+                        <a href="seat.html" class="custom-button back-button">
                             <i class="flaticon-double-right-arrows-angles"></i
                             >back
                         </a>
